patterns/circuit-breaker/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circuit-breaker-backend
  namespace: circuit-breaker-backend-app
spec:
  selector:
    app: circuit-breaker-backend
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
