patterns/circuit-breaker/backend/manifests/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuit-breaker-backend
  namespace: circuit-breaker-backend-app
spec:
  host: circuit-breaker-backend.circuit-breaker-backend-app.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
